HCAR: Add paragraph about Allan's GSOC

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -2,7 +2,7 @@
 \begin{hcarentry}[updated]{diagrams}
 \report{Brent Yorgey}%11/14
 \status{active development}
-\participants{Daniel Bergey, Jan Bracker, Christopher Chalmers, Daniil Frumin,  Alan Gardner, Andy Gill, 
+\participants{Daniel Bergey, Jan Bracker, Christopher Chalmers, Daniil Frumin,  Allan Gardner, Andy Gill, 
   Niklas Haas, John Lato, Chris Mears, Jeff Rosenbluth, Michael Sloan, Ryan Yates}
 
 \makeheader
@@ -91,9 +91,15 @@ We had two Google Summer of Code projects dedicated to diagrams
 projects this past summer ...
 
 \begin{itemize}
-\item (mathnerd 314) ...
-\item (hassn) ...
+\item (Allan Gardner)
+\item (Niklas Haas) ...
 \end{itemize}
+
+Allan Gardner laid the groundwork for using numeric types beyond
+Double.  After several iterations, this led to the adoption of the
+\textt{linear} package. This paves the way for using automatic
+differentiation, constraint solving, and fixed or dynamic precision
+numbers with Diagrams.
 
 \subsubsection*{Contributing}
 
