--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -74,16 +74,16 @@ slated to include:
 %**<img width=350 src="./PythagoreanTree.png">
 %*ignore
 \begin{center}
-\includegraphics[width=0.235\textwidth]{html/PythagoreanTree.png}
+\includegraphics[width=0.4\textwidth]{html/kaleidoscope.png}
 \end{center}
 %*endignore
 
 
 %**<img width=350 src="./FibCalls.png">
 %*ignore
-\begin{center}
-\includegraphics[width=0.33\textwidth]{html/FibCalls.png}
-\end{center}
+%\begin{center}
+%\includegraphics[width=0.33\textwidth]{html/FibCalls.png}
+%\end{center}
 %*endignore
 \subsubsection*{GSoC}
 
@@ -115,10 +115,10 @@ to get started, see the Contributing page on the diagrams wiki:
 \url{http://haskell.org/haskellwiki/Diagrams/Contributing}, or come
 hang out in the \texttt{\#diagrams} IRC channel on freenode.
 
-%**<img width=400 src="./tree500.jpg">
+%**<img width=400 src="./topoform.jpg">
 %*ignore
 \begin{center}
-\includegraphics[width=0.4\textwidth]{html/tree500.jpg}
+\includegraphics[width=0.4\textwidth]{html/topoform.jpg}
 \end{center}
 %*endignore
 
