add haasns GSoC project description as a backup

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -88,7 +88,7 @@ slated to include:
 \subsubsection*{GSoC}
 
 We had two Google Summer of Code projects dedicated to diagrams
-projects this past summer ...
+projects this past summer.
 
 \begin{itemize}
 \item Allan Gardner laid the groundwork for using numeric types beyond
@@ -96,7 +96,9 @@ Double.  After several iterations, this led to the adoption of the
 \textt{linear} package. This paves the way for using automatic
 differentiation, constraint solving, and fixed or dynamic precision
 numbers with Diagrams.
-\item (Niklas Haas) ...
+\item Niklas Haas  added lenses to diagrams, in order 
+to make it possible to (efficiently) traverse over diagrams and 
+subdiagrams, modifying them in the process.
 \end{itemize}
 
 
