--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -19,10 +19,10 @@ of primitive shapes and attributes, many different modes of
 composition, paths, cubic splines, images, text, arbitrary monoidal
 annotations, named subdiagrams, and more.
 
-%**<img width=400 src="./paradox.jpg">
+%**<img width=400 src="./arrows.jpg">
 %*ignore
 \begin{center}
-\includegraphics[width=0.47\textwidth]{html/arrows.png}
+\includegraphics[width=0.47\textwidth]{html/arrows.jpg}
 \end{center}
 %*endignore
 
@@ -71,10 +71,10 @@ slated to include:
 \end{itemize}
 
 
-%**<img width=350 src="./kaleidoscope.png">
+%**<img width=350 src="./kaleidoscope.jpg">
 %*ignore
 \begin{center}
-\includegraphics[width=0.45\textwidth]{html/kaleidoscope.png}
+\includegraphics[width=0.45\textwidth]{html/kaleidoscope.jpg}
 \end{center}
 %*endignore
 
