--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -28,8 +28,10 @@ annotations, named subdiagrams, and more.
 
 \subsubsection*{What's new}
 
-Since the last HCAR edition we have seen releases 1.0 and 1.1 and 
-the current version 1.2 was released in June 2014.
+There has been quite a bit going on with diagrams since the last
+HCAR edition. For staters version 1.0 was released.
+We also relieased version 1.1 and finally in June of 2014
+the current verion, 1.2.
 New features include:
 \begin{itemize}
 \item An API for drawing arrows including: several ways to connect diagrams
@@ -40,15 +42,14 @@ New features include:
   of better data structures to represent diagram output.
 \item Support for 3D diagrams.
 \item Introduction of a new measurement type and the removal of the
-  freeze function makes things like handling line widths and text sizes
-   more flexible.
+  freeze function make things like handling line widths and text sizes
+  more flexible and predictable.
 \item New haskell native backends: \texttt{diagrams-rasterific} and
   \texttt{diagrams-canvas}. 
 \item Many other features including support for: linear and radial gradients, tight alignment of convex
   shapes, improved clipping, animated GIFs (in cairo and rasterific), creating offsets paths,
   and both external and embedded images.
 \end{itemize}
-
 
 % %**<img width=400 src="./diagrams-haddock.jpg">
 % %*ignore
@@ -61,7 +62,7 @@ There have been many improvements and changes to the core
 diagrams libraries as well.  The next release of diagrams is
 slated to include:
 \begin{itemize}
-\item Support of handling directions (vectors which have forgotten their magnitude).
+\item Support for handling directions (vectors which have forgotten their magnitude).
   Which will provide a consistent API in all dimensions.
 \item Generic scalars values, i.e. not restricted to type 
   Double.
