--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -30,7 +30,7 @@ annotations, named subdiagrams, and more.
 
 There has been quite a bit going on with diagrams since the last
 HCAR edition. For staters version 1.0 was released.
-We also relieased version 1.1 and finally in June of 2014
+We also released version 1.1 and finally in June of 2014
 the current verion, 1.2.
 New features include:
 \begin{itemize}
