HCAR: fix latex typo

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -94,7 +94,7 @@ projects this past summer.
 \begin{itemize}
 \item Allan Gardner laid the groundwork for using numeric types beyond
 Double.  After several iterations, this led to the adoption of the
-\textt{linear} package. This paves the way for using automatic
+\texttt{linear} package. This paves the way for using automatic
 differentiation, constraint solving, and fixed or dynamic precision
 numbers with Diagrams.
 \item Niklas Haas  added lenses to diagrams, in order 
