--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -3,7 +3,7 @@
 \report{Jeffrey Rosenbluth}%11/14
 \status{active development}
 \participants{Daniel Bergey, Jan Bracker, Christopher Chalmers, Daniil Frumin,  Allan Gardner, Andy Gill, 
-  Niklas Haas, John Lato, Chris Mears, Jeff Rosenbluth, Michael Sloan, Ryan Yates}
+  Niklas Haas, John Lato, Chris Mears, Jeff Rosenbluth, Michael Sloan, Ryan Yates, Brent Yorgey}
 
 \makeheader
 
