--- a/blog/2013-12-03-Palette1.md
+++ b/blog/2013-12-03-Palette1.md
@@ -1,3 +1,11 @@
+---
+title: Introduction to Palette, Part 1
+author: Jeffrey Rosenbluth
+date: December 3, 2013
+tags: color, palette, brewer, d3
+description: Using the Palette color package
+...
+
 Introducing the Palette Package, Part I
 =======================================
 
