--- a/blog/2013-12-03-Palette2.md
+++ b/blog/2013-12-03-Palette2.md
@@ -1,3 +1,10 @@
+---
+title: Introduction to Palette, Part 2
+author: Jeffrey Rosenbluth
+date: December 4, 2013
+tags: color, palette, harmony
+description: Using the Palette color package
+...
 Introducing the Palette Package, Part II
 ========================================
 
