--- a/release/checklist.org
+++ b/release/checklist.org
@@ -83,15 +83,20 @@
   - dual-tree
   - diagrams-core
   - active
+  - diagrams-solve
   - diagrams-lib
   - SVGFonts
   - palette
+  - force-layout
   - diagrams-contrib
   - statestack
   - diagrams-cairo
   - diagrams-gtk
   - diagrams-postscript
+  - diagrams-rasterific
   - diagrams-svg
+  - diagrams-canvas
+  - diagrams-html5
   - diagrams
   - diagrams-builder
   - diagrams-haddock
@@ -103,40 +108,44 @@
   - diagrams-doc
   - diagrams-povray
 
-* Checklist for major releases
-  + go through per-package checklist
-  + user manual / tutorials
-    + make sure all examples build
-    + make sure documentation is up-to-date
-    + make sure all new features are described/mentioned in the manual
-    + diagrams-haddock
-      + make sure all diagrams-haddock examples build
-      + rebuild all diagrams-haddock examples and check them in
-  + testing
-    + check all travis tests
-    + run diagrams-backend-tests
-    + copy diagrams-backend-tests output to website
-  + update release page on website
-    - See previous versions for format.  Should be possible to
-      essentially paste in the relevant parts of the CHANGES files
-      for individual repos.
+* Checklist for major releases [0/8]
+** TODO go through per-package checklist
+** TODO user manual / tutorials [0/3]
++ [ ] make sure all examples build
++ [ ] make sure documentation is up-to-date
++ [ ] make sure all new features are described/mentioned in the manual
+** TODO testing [0/7]
++ [ ] check all travis tests
+      - all tests are passing, except:
+      - [ ] diagrams-doc (hakyll) (this one doesn't matter much)
+      - [ ] diagrams-builder on 7.8.1 (gcc bug?)
+      - [ ] diagrams-haddock on 7.8.1 (gcc bug?)
++ [ ] run diagrams-backend-tests
++ [ ] copy diagrams-backend-tests output to website
+** TODO update release page on website
+      - See previous versions for format.  Should be possible to
+        essentially paste in the relevant parts of the CHANGES files
+        for individual repos.
     - We should probably come up with a better format and/or a more
       automated way of doing this...
-  + upload packages
-    + List release date in each CHANGES file
-    + Apply a tag to each repo just before releasing
-      - The tag should have a name like "vX.X.X", with a v prefixed
-        to the version
-      - The tag message should mention the version and give a very
-        short comment describing the release
-      - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
-    + Upload
-  + regenerate combined Haddock documentation and commit to website.
-    NOTE: this must be done AFTER releasing packages to Hackage!
-    There is a script, build-haddocks.sh, in the diagrams-doc root
-    which can be used to build combined Haddocks.  See the comments
-    for more info and prerequisites.
-  + Rebuild and upload new website.
+** TODO diagrams-haddock [0/2]
++ [ ] make sure all diagrams-haddock examples build
++ [ ] rebuild all diagrams-haddock examples and check them in
+** TODO upload packages [0/3]
++ [ ] List release date in each CHANGES file
++ [ ] Apply a tag to each repo just before releasing
+        - The tag should have a name like "vX.X.X", with a v prefixed
+          to the version
+        - The tag message should mention the version and give a very
+          short comment describing the release
+        - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
++ [ ] Upload
+** TODO regenerate combined Haddock documentation and commit to website.
+      NOTE: this must be done AFTER releasing packages to Hackage!
+      There is a script, build-haddocks.sh, in the diagrams-doc root
+      which can be used to build combined Haddocks.  See the comments
+      for more info and prerequisites.
+** TODO Rebuild and upload new website.
 * Checklist for minor/bugfix releases
 
   If a package has had a bug fix, or some dependency version bound
