--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -1,23 +1,23 @@
 * Release checklist [0/8]
 ** TODO go through per-package checklist
-*** vector-space-points [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
+*** vector-space-points [5/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
-*** monoid-extras [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
+*** monoid-extras [6/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
++ [X] version bump
++ [X] LICENSE updated
 *** dual-tree [0/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
@@ -27,51 +27,51 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** diagrams-core [0/8]
+*** diagrams-core [5/8]
++ [X] CHANGES updated
++ [ ] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [ ] lower bounds fixed
++ [X] update tested-with field
++ [ ] Haddocks up to date
++ [X] version bump
++ [X] LICENSE updated
+*** active [2/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
-*** active [0/8]
-+ [ ] CHANGES updated
+*** diagrams-solve [6/8]
++ [X] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
++ [X] upper bounds fixed
++ [X] lower bounds fixed
++ [X] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** diagrams-solve [0/8]
-+ [ ] CHANGES updated
++ [X] version bump
++ [X] LICENSE updated
+*** diagrams-lib [5/8]
++ [X] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
++ [X] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** diagrams-lib [0/8]
-+ [ ] CHANGES updated
++ [X] version bump
++ [X] LICENSE updated
+*** SVGFonts [5/8]
++ [X] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
++ [X] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** SVGFonts [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
++ [X] version bump
++ [X] LICENSE updated
 *** palette [0/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
@@ -81,41 +81,41 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** force-layout [0/8]
+*** force-layout [2/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
++ [ ] Haddocks up to date
++ [ ] version bump
++ [X] LICENSE updated
+*** diagrams-contrib [5/8]
++ [X] CHANGES updated
++ [ ] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [ ] lower bounds fixed
++ [X] update tested-with field
++ [ ] Haddocks up to date
++ [X] version bump
++ [X] LICENSE updated
+*** statestack [3/8]
++ [ ] CHANGES updated
++ [ ] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
++ [X] update tested-with field
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** diagrams-contrib [0/8]
+*** diagrams-cairo [2/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** statestack [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** diagrams-cairo [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
 *** diagrams-gtk [0/8]
 + [ ] CHANGES updated
@@ -126,23 +126,23 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** diagrams-postscript [0/8]
+*** diagrams-postscript [1/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
 + [ ] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
-*** diagrams-rasterific [0/8]
+*** diagrams-rasterific [2/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
++ [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
 *** diagrams-svg [0/8]
 + [ ] CHANGES updated
@@ -153,14 +153,14 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** diagrams-canvas [0/8]
+*** diagrams-canvas [1/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
 + [ ] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
 *** diagrams-html5 [0/8]
 + [ ] CHANGES updated
@@ -180,14 +180,14 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** diagrams-builder [0/8]
+*** diagrams-builder [1/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
 + [ ] upper bounds fixed
 + [ ] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
-+ [ ] version bump
++ [X] version bump
 + [ ] LICENSE updated
 *** diagrams-haddock [0/8]
 + [ ] CHANGES updated
@@ -207,25 +207,7 @@
 + [ ] Haddocks up to date
 + [ ] version bump
 + [ ] LICENSE updated
-*** docutils [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
 *** diagrams-doc [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** diagrams-povray [0/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
 + [ ] upper bounds fixed
