--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -1,12 +1,12 @@
 * Release checklist [0/8]
 ** TODO go through per-package checklist
-*** monoid-extras [6/8]
+*** monoid-extras [8/8]
 + [X] CHANGES updated
 + [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [X] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
++ [X] update tested-with field
++ [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
 *** dual-tree [0/8]
