--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -237,7 +237,7 @@
 ** TODO diagrams-haddock [0/2]
 + [ ] make sure all diagrams-haddock examples build
 + [ ] rebuild all diagrams-haddock examples and check them in
-** TODO upload packages [0/3]
+** TODO upload packages [1/27]
 For each package:
 + [ ] List release date in each CHANGES file
 + [ ] Apply a tag to each repo just before releasing
@@ -247,9 +247,9 @@ For each package:
           short comment describing the release
         - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
 
-Packages:
+Packages uploaded to Hackage:
 + [ ] monoid-extras
-+ [ ] dual-tree
++ [X] dual-tree (0.2.0.6)
 + [ ] diagrams-core
 + [ ] active
 + [ ] diagrams-solve
