--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -9,22 +9,22 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** dual-tree [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
-*** diagrams-core [5/8]
+*** dual-tree [6/8]
 + [X] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
++ [ ] update tested-with field
++ [X] Haddocks up to date
++ [X] version bump
++ [ ] LICENSE updated
+*** diagrams-core [7/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [ ] lower bounds fixed
 + [X] update tested-with field
-+ [ ] Haddocks up to date
++ [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
 *** active [2/8]
