--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -27,15 +27,15 @@
 + [X] Haddocks up to date
 + [X] version bump
 + [X] LICENSE updated
-*** active [2/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
+*** active [7/8]
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
++ [X] update tested-with field
++ [X] Haddocks up to date
 + [X] version bump
-+ [ ] LICENSE updated
++ [X] LICENSE updated
 *** diagrams-solve [6/8]
 + [X] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
