--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -17,7 +17,7 @@
 + [ ] update tested-with field
 + [X] Haddocks up to date
 + [X] version bump
-+ [ ] LICENSE updated
++ [X] LICENSE updated
 *** diagrams-core [7/8]
 + [X] CHANGES updated
 + [X] all CHANGES in user manual or tutorial
