Update release.org 1.3 for palette

--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -64,19 +64,19 @@
 + [X] version bump
 + [X] LICENSE updated
 *** palette [0/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
-+ [ ] upper bounds fixed
-+ [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
-+ [ ] version bump
-+ [ ] LICENSE updated
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
++ [X] upper bounds fixed
++ [X] lower bounds fixed
++ [X] update tested-with field
++ [X] Haddocks up to date
++ [X] version bump
++ [X] LICENSE updated
 *** force-layout [2/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
-+ [ ] lower bounds fixed
++ [] lower bounds fixed
 + [ ] update tested-with field
 + [ ] Haddocks up to date
 + [ ] version bump
