--- a/release/1.3/release-1.3.org
+++ b/release/1.3/release-1.3.org
@@ -138,14 +138,14 @@
 *** cchalmers/texrunner [0/1]
 + [ ] upload
 *** diagrams-rasterific [2/8]
-+ [ ] CHANGES updated
-+ [ ] all CHANGES in user manual or tutorial
++ [X] CHANGES updated
++ [X] all CHANGES in user manual or tutorial
 + [X] upper bounds fixed
 + [ ] lower bounds fixed
-+ [ ] update tested-with field
-+ [ ] Haddocks up to date
++ [X] update tested-with field
++ [X] Haddocks up to date
 + [X] version bump
-+ [ ] LICENSE updated
++ [X] LICENSE updated
 *** diagrams-svg [0/8]
 + [ ] CHANGES updated
 + [ ] all CHANGES in user manual or tutorial
